# pdf-highlight-api

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  demo-gemini-document.html  demo-v3.html  demo-v4.html  docker-compose.yml  main.py  pyproject.toml  test-pdf-to-image.html  test.html
.codex/: AGENTS.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  development_environment.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
src/: main.py
src/infrastructure/: __init__.py  gemini.py
